--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
+  overflow-x: hidden;
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
 }
